# spatial

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/cube/: Cargo.toml
examples/cube-glb/: Cargo.toml
examples/cube-glb/src/: lib.rs  main.rs
examples/cube/src/: lib.rs
examples/simple-cube/: Cargo.toml
examples/simple-cube/src/: lib.rs
fastn/: Cargo.toml
fastn-cli/: Cargo.toml
fastn-cli/src/: lib.rs  main.rs  web_shell.rs
fastn-hub/: Cargo.toml  README.md
fastn-hub/src/: lib.rs  main.rs
fastn-hub/static/: fastn_spoke.d.ts  fastn_spoke.js  fastn_spoke_bg.wasm.d.ts  index.html
fastn-hub/tests/: acl_tests.rs
fastn-kosha/: Cargo.toml  README.md
fastn-kosha/src/: lib.rs
fastn-macros/: Cargo.toml
fastn-macros/src/: lib.rs
fastn-net/: Cargo.toml
fastn-net/src/: lib.rs
fastn-protocol/: Cargo.toml
fastn-shell/: Cargo.toml
fastn-shell-web/: cube.wasm  index.html  shell-common.js  shell-webgl-xr.js  shell-webgpu.js  shell.js
fastn-shell/src/: asset_loader.rs  gamepad.rs  lib.rs  main.rs  renderer.rs  shader.wgsl  wasm_runtime.rs
fastn-spoke/: Cargo.toml  README.md  tauri.conf.json
fastn-spoke/frontend/: app.html  index.html
fastn-spoke/src/: gui.rs  kosha.rs  lib.rs  main.rs
fastn/src/: app.rs  camera.rs  entity.rs  example_core.rs  lib.rs  main.rs  material.rs  mesh.rs  protocol.rs  reality_view.rs  simple.rs  wasm_bridge.rs
quest-test/: Cargo.toml  README.md
quest-test/src/: lib.rs  main.rs
scripts/: fastn-build.sh  index.html.tmpl
