[workspace]
members = ["fastn"]
resolver = "2"


[workspace.package]
authors = ["Amit Upadhyay <upadhyay@gmail.com>"]
edition = "2024"
license = "UPL-1.0"
repository = "https://github.com/fastn-stack/fastn"
homepage = "https://fastn.com"
rust-version = "1.92"


[workspace.dependencies]
wgpu = "27.0"
winit = "0.30"
log = "0.4"
gltf = "1.4"
bytemuck = { version = "1.21", features = ["derive"] }
glam = "0.30"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "console",
    "Navigator",
    "Gamepad",
    "GamepadButton",
    "GamepadEvent",
    "Performance",
    "Response",
] }
js-sys = "0.3"
console_log = "1.0"
console_error_panic_hook = "0.1"

[profile.release]
strip = true
# lto = true
# opt-level = "z"
# panic = "abort"
