[workspace]
members = ["fastn", "fastn-cli", "fastn-macros", "fastn-protocol", "fastn-shell", "examples/*"]
resolver = "2"


[workspace.package]
authors = ["Amit Upadhyay <upadhyay@gmail.com>"]
edition = "2024"
license = "UPL-1.0"
repository = "https://github.com/fastn-stack/fastn"
homepage = "https://fastn.com"
rust-version = "1.92"


[workspace.dependencies]
wgpu = { version = "27.0", features = ["webgl"] }
winit = "0.30"
log = "0.4"
gltf = "1.4"
bytemuck = { version = "1.21", features = ["derive"] }
glam = "0.30"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "console",
    "Navigator",
    "Gamepad",
    "GamepadButton",
    "GamepadEvent",
    "Performance",
    "Response",
    # WebXR support (unstable APIs)
    "XrSystem",
    "XrSession",
    "XrSessionMode",
    "XrSessionInit",
    "XrRenderState",
    "XrRenderStateInit",
    "XrFrame",
    "XrViewerPose",
    "XrView",
    "XrViewport",
    "XrRigidTransform",
    "XrSpace",
    "XrReferenceSpace",
    "XrReferenceSpaceType",
    "XrWebGlLayer",
    "XrWebGlLayerInit",
    "XrInputSource",
    "XrInputSourceArray",
    "XrInputSourceEvent",
    "XrInputSourcesChangeEvent",
    "XrHand",
    "XrHandedness",
    "XrTargetRayMode",
    "XrPose",
    "XrSessionEvent",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
] }
js-sys = "0.3"
console_log = "1.0"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = "29"
pollster = "0.4"
env_logger = "0.11"
sdl2 = { version = "0.37", features = ["bundled", "static-link"] }

[profile.release]
strip = true
# lto = true
# opt-level = "z"
# panic = "abort"
