[package]
name = "fastn-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tools for fastn - build, serve, and run spatial/XR applications"
license = "MIT OR Apache-2.0"

[lib]

[[bin]]
name = "fastn"
path = "src/main.rs"

[features]
default = ["native-shell"]
native-shell = ["dep:fastn-shell"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tiny_http = "0.12"
sha2 = "0.10"
toml = "0.8"
walkdir = "2.5"
serde_json = "1.0"

# Optional: native shell for `cargo run` (not needed for build/serve)
fastn-shell = { path = "../fastn-shell", optional = true }
