[package]
name = "fastn-hub"
version = "0.1.0"
edition = "2024"
description = "Hub server for fastn P2P network - manages koshas and authenticated spokes"

[[bin]]
name = "fastn-hub"
path = "src/main.rs"

[dependencies]
fastn-net = { path = "../fastn-net" }
fastn-kosha = { path = "../fastn-kosha" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread", "macros", "net"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
dirs = "6.0"
rand = "0.8"
axum = "0.8"
tracing = "0.1"

[dev-dependencies]
base64 = "0.22"
