[package]
name = "fastn-hub"
version = "0.1.0"
edition = "2024"
description = "Hub server for fastn P2P network - manages koshas and authenticated spokes"

[[bin]]
name = "fastn-hub"
path = "src/main.rs"

[lib]
name = "fastn_hub"
path = "src/lib.rs"

[features]
default = ["server"]
server = []

[dependencies]
# Core dependencies (always needed for types)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Server-only dependencies (native only)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastn-net = { path = "../fastn-net" }
fastn-kosha = { path = "../fastn-kosha" }
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread", "macros", "net"] }
directories = "6.0"
dirs = "6.0"
axum = "0.8"
tracing = "0.1"
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
base64 = "0.22"
