[package]
name = "fastn-kosha"
version = "0.1.0"
edition = "2024"
description = "Versioned file system and CRDT key-value store abstraction"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
