[package]
name = "fastn-net"
version = "0.1.0"
edition = "2024"
description = "Minimal hub-spoke P2P networking with HTTP transport and signed JSON"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
data-encoding = "2.6"
tracing = "0.1"

# HTTP client for spoke (native) - only on non-wasm targets
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }

# HTTP server for hub (native only)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["sync", "rt"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# HTTP client for spoke (web/WASM)
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"

[features]
default = ["client", "server"]
client = ["dep:reqwest", "reqwest/rustls-tls"]
server = ["dep:axum", "dep:tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
