[package]
name = "fastn-spoke"
version = "0.1.0"
edition = "2024"
description = "Spoke client for fastn P2P network - connects to hubs and accesses koshas"

[[bin]]
name = "fastn-spoke"
path = "src/main.rs"

[lib]
name = "fastn_spoke"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["gui"]
# GUI support (Tauri - native desktop only)
gui = ["tauri", "tauri-build"]

[dependencies]
fastn-net = { path = "../fastn-net", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
base64 = "0.22"

# GUI dependencies (optional)
tauri = { version = "2", optional = true, features = [] }

# Native-only dependencies (automatically included on non-wasm targets)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastn-net = { path = "../fastn-net", features = ["client"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
directories = "6.0"
dirs = "6.0"

# Web/WASM dependencies (automatically included on wasm32 targets)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemCreateWritableOptions",
    "FileSystemWritableFileStream",
    "File",
    "Blob",
    "console",
] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
tauri-build = { version = "2", optional = true, features = [] }
