[package]
name = "fastn"
version = "0.1.0"
edition = "2024"
description = "Build spatial/XR applications in Rust"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies (always needed)
log.workspace = true
serde.workspace = true
serde_json.workspace = true
