[package]
name = "fastn"
version = "0.1.0"
edition = "2024"
description = "Build spatial/XR applications in Rust"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cli", "native-shell"]
cli = ["fastn-cli"]
native-shell = ["fastn-cli", "fastn-cli/native-shell"]

[dependencies]
# Core dependencies (always needed)
log.workspace = true
serde.workspace = true
serde_json.workspace = true
fastn-macros = { path = "../fastn-macros" }
fastn-protocol = { path = "../fastn-protocol" }

# CLI (native only, optional)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastn-cli = { path = "../fastn-cli", optional = true, default-features = false }
